fixed seed data

--- a/public/sites/mangosteen.html
+++ b/public/sites/mangosteen.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <img src="../images/mangosteen.jpg" style="max-width: 500px; max-height: 500px;" />
-    <p>durian</p>
+    <p>mangosteen</p>
     <h2>Links!</h2>
     <a href="durian.html">durian</a>
   </body>
