feature: Adds halo monopoly site

--- a/public/sites/halo-deadpool.html
+++ b/public/sites/halo-deadpool.html
@@ -7,6 +7,7 @@
     <img src="../images/halo-deadpool.jpg" style="max-width: 500px; max-height: 500px;" />
     <p>halo super fan!</p>
     <h2>Links!</h2>
-    <a href="halos_fruit.html">music</a>
+    <a href="halo-5-official.html">halo</a>
+    <a href="halo-5.html">halo</a>
   </body>
 </html>
