--- a/public/sites/halo-monopoly.html
+++ b/public/sites/halo-monopoly.html
@@ -4,8 +4,8 @@
     <title>angel-halo</title>
   </head>
   <body>
-    <img src="../images/halo_1.jpg" style="max-width: 500px; max-height: 500px;" />
-    <p>The original halo</p>
+    <img src="../images/halo-monopoly.jpg" style="max-width: 500px; max-height: 500px;" />
+    <p>latest halo</p>
     <h2>Links!</h2>
     <a href="halo-5-official.html">halo</a>
     <a href="halo-5.html">halo</a>
