--- a/public/sites/halo-5.html
+++ b/public/sites/halo-5.html
@@ -7,6 +7,7 @@
     <img src="../images/halo-5.jpg" style="max-width: 500px; max-height: 500px;" />
     <p>latest halo</p>
     <h2>Links!</h2>
-    <a href="halo-deadpool.html">music</a>
+    <a href="halo-5-official.html">halo</a>
+    <a href="halo-1.html">halo</a>
   </body>
 </html>
